Spacing fix

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -40,6 +40,7 @@ li {
   overflow: hidden;
 }
 .landing-pic img {
+  max-height: 50vh;
   flex-shrink: 0;
   min-width: 100%;
   min-height: 100%;
@@ -65,7 +66,7 @@ li {
 
 #story-container {
   padding: 30px;
-  /* max-height: 100%; */
+  height: 50vh;
 }
 
 #tech-header {
